# HuskyFit-Backend-Serverless-AWS

./: README.md  package-lock.json  package.json
ML/: Matrix Factorization in PyTorch.ipynb  Sparse.ipynb  dummyModel.ipynb  flake.nix  pyproject.toml  recommend.py  testModel.ipynb
ML/.ipynb_checkpoints/: dummyModel-checkpoint.ipynb  testModel-checkpoint.ipynb
ML/train_gr/: game_overview.csv
Sage/: deploy.ipynb  dummyModel.ipynb  sage.ipynb
backend/: .gitignore  12112022data.csv  buckleyScraper.py  cache-test-2.py  cache_dining_hall_data.py  daily_scraper.py  event.json  foodlog.js  handler.js  mock.py  mockRec.py  mock_data_breakfast.json  mock_data_dinner.json  mock_data_lunch.json  package-lock.json  package.json  profile.js  ratings.js  rec.js  scraper-test.py  scraper.py  serverless.yml  shell.nix  test.http  test.py  tmp.py  userInfo.js  workout.js
backend-node/: handler.js  scraper.py  serverless.yml  test.py
backend-python/UconnFit-Python-Scraper-API/: handler.py
backend/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
backend/.warmup/: index.js
backend/auth/: login.js  private.js  signup.js
backend/auth/validate/: index.js
backend/cache-testing/: buckleyScraper.py
backend/resources/: cognito.yml  dynamo.yml
